--- a/addin/taskpane.html
+++ b/addin/taskpane.html
@@ -13,7 +13,13 @@
         <h1>Email ID Viewer</h1>
     </div>
     <div id="content-main">
-        <p><strong>Email ID:</strong> <span id="email-id">Select an email to view its ID</span></p>
+        <p><strong>Email ID:</strong></p>
+        <div id="email-id-container">
+            <span id="email-id">Loading...</span>
+        </div>
+        <div id="instructions">
+            <small>💡 <strong>Tip:</strong> This pane should stay open when switching emails. Select different emails to see their IDs update automatically. If the pane closes, click the "Email ID Viewer" button again to reopen it.</small>
+        </div>
     </div>
 </body>
 </html>
